force-apps/deploy/main/default/objects/xBroker__x/xBroker__x.object-meta.xml
<CustomObject>
    <description>public$broker__c</description>
    <externalDataSource>OData_Demo</externalDataSource>
    <externalName>public$broker__c</externalName>
    <label>xBroker</label>
    <pluralLabel>xBrokers</pluralLabel>
</CustomObject>