force-apps/deploy/main/default/objects/xBroker__x/fields/email_c__c.field-meta.xml
<CustomField>
    <fullName>email_c__c</fullName>
    <description>email__c</description>
    <externalDeveloperName>email__c</externalDeveloperName>
    <label>email__c</label>
    <length>80</length>
    <type>Text</type>
</CustomField>