force-apps/deploy/main/default/objects/xBroker__x/fields/mobile_phone_c__c.field-meta.xml
<CustomField>
    <fullName>mobile_phone_c__c</fullName>
    <description>mobile_phone__c</description>
    <externalDeveloperName>mobile_phone__c</externalDeveloperName>
    <label>mobile_phone__c</label>
    <length>40</length>
    <type>Text</type>
</CustomField>