force-apps/deploy/main/default/objects/xBroker__x/fields/phone_c__c.field-meta.xml
<CustomField>
    <fullName>phone_c__c</fullName>
    <description>phone__c</description>
    <externalDeveloperName>phone__c</externalDeveloperName>
    <label>phone__c</label>
    <length>40</length>
    <type>Text</type>
</CustomField>