force-apps/deploy/main/default/objects/xBroker__x/fields/picture_c__c.field-meta.xml
<CustomField>
    <fullName>picture_c__c</fullName>
    <description>picture__c</description>
    <externalDeveloperName>picture__c</externalDeveloperName>
    <label>picture__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>